# News_service

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
api/: apps.py  serializers.py  views.py
backend/: Dockerfile
backend/api/: urls.py
backend/api/v1/: permissions.py  serializers.py  views.py
backend/config/: settings.py  urls.py
backend/news/: admin.py  models.py
backend/news/migrations/: 0001_initial.py  0002_comments.py  0003_alter_comments_options_alter_news_options.py
backend/users/: admin.py  authentication.py  models.py
backend/users/migrations/: 0001_initial.py  0002_create_superuser.py
config/: settings.py
infra/: .env  deploy.sh  docker-compose.yml  docker_down.sh  nginx.conf  remove_postgresql_volume.sh
news/: admin.py  models.py
news/migrations/: 0001_initial.py  0002_comments.py
users/: admin.py  models.py
