[tool.poetry]
name = "test-for-itfox"
version = "0.1.0"
description = ""
authors = ["Imwisagist@yandex.ru"]
readme = "README.md"
packages = [{include = "test_for_itfox"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.2"
djangorestframework = "^3.14.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
